 9. Clear cache if artist list is toggled between single list or separate
    artists and album artists.
10. Only hide home button if screen is less than 290px wide.
11. Ignore negative coverid attributes.
12. Fix moving items to lower position in list.
13. Give shadow to letter-overlay.
14. Fix cover grid sizing, and jump list activation.

0.8.0
-----
 1. If rating from server is undefined, but TrackStat is installed, then show
    rating as 0.
 2. Longpress on 'Browse' navigation button (whilst on 'Browse' view) will
    navigate to top (home).
 3. Clear selection when go back/home.
 4. Work-around item selection not updating until redraw if using large lists.
 5. Handle play queue updates whilst items are selected.
 6. Allow playlist tracks to be selected.
 7. Playlist editing; moving and removing of tracks.
 8. Allow drag'n'drop re-ordering of favourites if not set to sort. Can only
    move a single favourite at a time, not a selection.
 9. Calculate mobile/portrait padding when now-playing is initially shown.
10. Place on/off toggle button next to each player in menu.
11. Add 'Group Players' and 'Standard Players' headers to player selection menu,
    where appropriate.
12. Fix 'Set sleep for all players'
13. Fix detection of group players for 'Manage players' dialog.
14. Fix divider in group players context menu in 'Manage players' dialog.
15. Fix updating player list in 'Manager players' dialog - e.g. when a player
    is added or removed.
16. Add form validation to some dialogs.
17. Clicking on player's sleep time in players menu will show sleep settings
    dialog.
18. Add action to change album sort (only shown when listing albums).
19. Remove library selection from settings dialog, its available from main page.
20. For mobile layout, move grid/list toggle and album-sort action into main
    settings menu. For desktop, these are shown in the sub toolbar.
21. Only show 'Synchronise' menu option if there is more than 1 non-group
    player.